--- a/docs/modules/ROOT/pages/use-in-notebook-python.adoc
+++ b/docs/modules/ROOT/pages/use-in-notebook-python.adoc
@@ -1,4 +1,4 @@
-== Jupyter Notebook - Python
+== Jupyter Notebook – Python
 
 This section shows an example of using TED data in a Python Jupyter Notebook. The
 Jupyter Notebook is an application for creating and sharing
@@ -13,7 +13,7 @@ To run Python sample:
 [arabic]
 . Download Jupyter Notebook file:
 
-https://github.com/OP-TED/ted-rdf-conversion-pipeline/blob/main/notebooks/query_cellar_python.ipynb[[.underline]#https://github.com/OP-TED/ted-rdf-conversion-pipeline/blob/main/notebooks/query_cellar_python.ipynb#]
+https://github.com/meaningfy-ws/ted-rdf-exploring/blob/main/notebooks/query_cellar_python.ipynb[[.underline]#https://github.com/meaningfy-ws/ted-rdf-exploring/blob/main/notebooks/query_cellar_python.ipynb#]
 
 [arabic, start=2]
 . Download & Install Python 3.8:
@@ -24,9 +24,9 @@ https://www.python.org/ftp/python/3.8.10/python-3.8.10-amd64.exe[[.underline]#do
 .. Windows 86bit:
 https://www.python.org/ftp/python/3.8.10/python-3.8.10.exe[[.underline]#download#]
 
-. Open Jupyter Notebook file with code editor (VS Code):
+. Open Jupyter Notebook file with your favourite IDE (e.g. VS Code editor):
 
-. In code editor, select interpreter for Python that was installed
+. In the IDE, select interpreter for Python that was installed
 
 Example in VS Code:
 
@@ -40,11 +40,11 @@ image:python/image8.png[image,width=617,height=204]
 pip install ipykernel sparqlwrapper pandas
 
 [arabic, start=6]
-. Run Cells (example in VS Code):
+. Run All the Notebook Cells (example in VS Code):
 
 image:python/image62.png[image,width=601,height=84]
 
-If all works good, on last output cell we can see results:
+After the execution on last output cell we can see results:
 
 image:python/image2.png[image,width=387,height=420]
 
